--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
             "email": "zavalit@gmail.com"
         }
     ],
+    "bin": ["bin/server"],
     "minimum-stability": "alpha",
     "require": {"php": ">=5.5"},
     "autoload": {
